// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
Array [
  .c0 {
  fill: rgb(127,29,24);
  height: NaNpx;
  width: px;
}

.c0:hover {
  fill: hsl(2.8999999999999773,68.2%,23.7%);
}

<g
    className="bar-layer"
  >
    <rect
      className="bar c0"
      color="rgb(127, 29, 24)"
      size={
        Object {
          "height": NaN,
          "width": undefined,
        }
      }
      value={1}
    />
    <rect
      className="bar c0"
      color="rgb(127, 29, 24)"
      size={
        Object {
          "height": NaN,
          "width": undefined,
        }
      }
      value={5}
    />
  </g>,
  .c0 {
  fill: rgb(255,131,124);
  height: NaNpx;
  width: px;
}

.c0:hover {
  fill: hsl(3.1999999999999886,100%,59.5%);
}

<g
    className="baz-layer"
  >
    <rect
      className="bar c0"
      color="rgb(255, 131, 124)"
      size={
        Object {
          "height": NaN,
          "width": undefined,
        }
      }
      value={2}
    />
    <rect
      className="bar c0"
      color="rgb(255, 131, 124)"
      size={
        Object {
          "height": NaN,
          "width": undefined,
        }
      }
      value={6}
    />
  </g>,
]
`;

exports[`Should render correctly with date 1`] = `
Array [
  .c0 {
  fill: rgb(127,29,24);
  height: NaNpx;
  width: 8.352125615969264px;
}

.c0:hover {
  fill: hsl(2.8999999999999773,68.2%,23.7%);
}

<g
    className="bar-layer"
  >
    <rect
      className="bar c0"
      color="rgb(127, 29, 24)"
      size={
        Object {
          "height": NaN,
          "width": 8.352125615969264,
        }
      }
      value={1}
      x={NaN}
    />
    <rect
      className="bar c0"
      color="rgb(127, 29, 24)"
      size={
        Object {
          "height": NaN,
          "width": 8.352125615969264,
        }
      }
      value={5}
      x={NaN}
    />
  </g>,
  .c0 {
  fill: rgb(255,131,124);
  height: NaNpx;
  width: 8.352125615969264px;
}

.c0:hover {
  fill: hsl(3.1999999999999886,100%,59.5%);
}

<g
    className="baz-layer"
  >
    <rect
      className="bar c0"
      color="rgb(255, 131, 124)"
      size={
        Object {
          "height": NaN,
          "width": 8.352125615969264,
        }
      }
      value={2}
      x={NaN}
    />
    <rect
      className="bar c0"
      color="rgb(255, 131, 124)"
      size={
        Object {
          "height": NaN,
          "width": 8.352125615969264,
        }
      }
      value={6}
      x={NaN}
    />
  </g>,
]
`;
